# devin-cli

./: Cargo.toml  LICENSE  README.md
docs/: DEVELOPER.md  USER.md
src/: lib.rs  main.rs
src/api/: client.rs  client_test.rs  models.rs
src/commands/: configure.rs  doctor.rs  mod.rs  session.rs  show.rs
src/config/: storage.rs  storage_test.rs
tests/integration/: cli_test.rs  main.rs
tests/unit/: config_test.rs
