[package]
name = "devin"
version = "0.1.0"
edition = "2021"
description = "CLI tool for interacting with the Devin API"
authors = ["Devin AI <devin-ai-integration[bot]@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/appwiz/devin-cli"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
confy = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
anyhow = "1.0"
thiserror = "1.0"
colored = "2.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.8"
mockito = "1.2"
